--- a/Data_preprocessing/forCovLineages.ipynb
+++ b/Data_preprocessing/forCovLineages.ipynb
@@ -1705,8 +1705,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "f71952c6-a5d2-412e-bf33-1c09475ee4d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Colombia', 'Denmark', 'Lebanon', 'Ecuador', 'Republic_of_the_Congo', 'Netherlands', 'Spain', 'Slovenia', 'Papua_New_Guinea', 'Slovakia', 'Pakistan', 'Burkina_Faso', 'Romania', 'Greece', 'Switzerland', 'Equatorial_Guinea', 'Saudi_Arabia', 'Iraq', 'Oman', 'Aruba', 'Kenya', 'Ghana', 'Chile', 'Portugal', 'Uruguay', 'Qatar', 'Macedonia', 'New_Zealand', 'Luxembourg', 'Sierra_Leone', 'Brazil', 'Bulgaria', 'Thailand', 'Italy', 'Iran', 'Saint_Vincent_and_the_Grenadines', 'France', 'Tunisia', 'Maldives', 'Zambia', 'Czech_Republic', 'Gambia', 'Taiwan', 'Vietnam', 'Malaysia', 'Peru', 'Sweden', 'Rwanda', 'Hong_Kong', 'Poland', 'Morocco', 'Mozambique', 'Laos', 'Estonia', 'India', 'Suriname', 'Japan', 'Philippines', 'Trinidad_and_Tobago', 'Fiji', 'Lithuania', 'Latvia', 'Austria', 'Kuwait', 'Mauritius', 'Kazakhstan', 'Martinique', 'Indonesia', \"Cote_d'Ivoire\", 'French_Guiana', 'Bahrain', 'Turkey', 'South_Korea', 'Panama', 'Egypt', 'Ireland', 'Senegal', 'China', 'Costa_Rica', 'Canada', 'Uganda', 'United Kingdom', 'United_Arab_Emirates', 'Sri_Lanka', 'Russia', 'Bonaire', 'Singapore', 'Nigeria', 'Angola', 'Finland', 'Mexico', 'Gibraltar', 'Australia', 'Mayotte', 'Reunion', 'Brunei', 'Democratic Republic of the Congo', 'Botswana', 'Belgium', 'Bangladesh', 'Canary_Islands', 'Germany', 'Norway', 'Iceland', 'Curaçao', 'Jordan', 'Nicaragua', 'Hungary', 'Israel', 'Argentina', 'Croatia', 'Solomon_Islands', 'United States of America', 'South_Africa'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "country_list = set(data['Most common country'].to_list())\n",
+    "print(country_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9230018-f223-484d-84fd-90f6f07b2d42",
    "metadata": {},
    "outputs": [],
    "source": []
