upload seq data

--- a/Data_preprocessing/NCBIVirus.ipynb
+++ b/Data_preprocessing/NCBIVirus.ipynb
@@ -1280,21 +1280,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "1e541e0d-9741-476f-9d2b-2c4e36a3dc4c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_path = \"../Data/NCBI_virus/aa/USA\""
+    "f_path = \"../Data/NCBI_virus/aa/aa_Bahrain.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "5fb55ab3-9411-49d5-a00c-2bccd643f085",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Accession</th>\n",
+       "      <th>Pangolin</th>\n",
+       "      <th>PangoVersions</th>\n",
+       "      <th>Isolate</th>\n",
+       "      <th>Length</th>\n",
+       "      <th>Geo_Location</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Collection_Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>OQ438434</td>\n",
+       "      <td>BQ.1.1.31</td>\n",
+       "      <td>4.2/1.18.1.1/v0.1.10/0.3.17</td>\n",
+       "      <td>831208783</td>\n",
+       "      <td>29715</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2022-12-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OQ438442</td>\n",
+       "      <td>BQ.1.1</td>\n",
+       "      <td>4.2/1.18.1.1/v0.1.10/0.3.17</td>\n",
+       "      <td>841418640</td>\n",
+       "      <td>29715</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2022-11-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>OQ438449</td>\n",
+       "      <td>BQ.1.1</td>\n",
+       "      <td>4.2/1.18.1.1/v0.1.10/0.3.17</td>\n",
+       "      <td>740806041</td>\n",
+       "      <td>29718</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2022-12-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OQ438458</td>\n",
+       "      <td>BQ.1.1.5</td>\n",
+       "      <td>4.2/1.18.1.1/v0.1.10/0.3.17</td>\n",
+       "      <td>781109434</td>\n",
+       "      <td>29718</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2022-12-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>OQ438463</td>\n",
+       "      <td>BQ.1.23</td>\n",
+       "      <td>4.2/1.18.1.1/v0.1.10/0.3.17</td>\n",
+       "      <td>781005884</td>\n",
+       "      <td>29715</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2022-11-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2754</th>\n",
+       "      <td>MT745875</td>\n",
+       "      <td>B.1.1</td>\n",
+       "      <td>4.2/1.18.1.1/v0.1.10/0.3.17</td>\n",
+       "      <td>023232093</td>\n",
+       "      <td>29800</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2020-06-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2755</th>\n",
+       "      <td>MT742782</td>\n",
+       "      <td>AE.2</td>\n",
+       "      <td>4.2/1.18.1.1/v0.1.10/0.3.17</td>\n",
+       "      <td>Wuhan-Hu-1</td>\n",
+       "      <td>29885</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2756</th>\n",
+       "      <td>MT742783</td>\n",
+       "      <td>B.1.281</td>\n",
+       "      <td>4.2/1.18.1.1/v0.1.10/0.3.17</td>\n",
+       "      <td>wuhan-hu-1</td>\n",
+       "      <td>29856</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2757</th>\n",
+       "      <td>MT742784</td>\n",
+       "      <td>AE.4</td>\n",
+       "      <td>4.2/1.18.1.1/v0.1.10/0.3.17</td>\n",
+       "      <td>Wuhan-HU-1</td>\n",
+       "      <td>29766</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2758</th>\n",
+       "      <td>MT731346</td>\n",
+       "      <td>B.1.281</td>\n",
+       "      <td>4.2/1.18.1.1/v0.1.10/0.3.17</td>\n",
+       "      <td>Wuhan-Hu-1</td>\n",
+       "      <td>29867</td>\n",
+       "      <td>Bahrain: Capital</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2759 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Accession   Pangolin                PangoVersions     Isolate  Length  \\\n",
+       "0     OQ438434  BQ.1.1.31  4.2/1.18.1.1/v0.1.10/0.3.17   831208783   29715   \n",
+       "1     OQ438442     BQ.1.1  4.2/1.18.1.1/v0.1.10/0.3.17   841418640   29715   \n",
+       "2     OQ438449     BQ.1.1  4.2/1.18.1.1/v0.1.10/0.3.17   740806041   29718   \n",
+       "3     OQ438458   BQ.1.1.5  4.2/1.18.1.1/v0.1.10/0.3.17   781109434   29718   \n",
+       "4     OQ438463    BQ.1.23  4.2/1.18.1.1/v0.1.10/0.3.17   781005884   29715   \n",
+       "...        ...        ...                          ...         ...     ...   \n",
+       "2754  MT745875      B.1.1  4.2/1.18.1.1/v0.1.10/0.3.17   023232093   29800   \n",
+       "2755  MT742782       AE.2  4.2/1.18.1.1/v0.1.10/0.3.17  Wuhan-Hu-1   29885   \n",
+       "2756  MT742783    B.1.281  4.2/1.18.1.1/v0.1.10/0.3.17  wuhan-hu-1   29856   \n",
+       "2757  MT742784       AE.4  4.2/1.18.1.1/v0.1.10/0.3.17  Wuhan-HU-1   29766   \n",
+       "2758  MT731346    B.1.281  4.2/1.18.1.1/v0.1.10/0.3.17  Wuhan-Hu-1   29867   \n",
+       "\n",
+       "          Geo_Location  Country Collection_Date  \n",
+       "0              Bahrain  Bahrain      2022-12-02  \n",
+       "1              Bahrain  Bahrain      2022-11-23  \n",
+       "2              Bahrain  Bahrain      2022-12-04  \n",
+       "3              Bahrain  Bahrain      2022-12-03  \n",
+       "4              Bahrain  Bahrain      2022-11-16  \n",
+       "...                ...      ...             ...  \n",
+       "2754           Bahrain  Bahrain      2020-06-24  \n",
+       "2755           Bahrain  Bahrain      2020-06-23  \n",
+       "2756           Bahrain  Bahrain      2020-06-23  \n",
+       "2757           Bahrain  Bahrain      2020-06-23  \n",
+       "2758  Bahrain: Capital  Bahrain      2020-06-23  \n",
+       "\n",
+       "[2759 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(f_path)\n",
+    "df = df[['Accession', 'Pangolin', 'Length','Country', 'Collection_Date']]\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
