--- a/Data_preprocessing/NCBIVirus.ipynb
+++ b/Data_preprocessing/NCBIVirus.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "#### Parameters Setting\n",
     "- Collection Date: `From Jan 1,2021 To Dex 31, 2023`\n",
-    "- Geographic Region: the 28 countries in list `country_forSeq`\n",
+    "- Geographic Region: the 28 countries in list `country_forSeq`; remove `Iceland` and `Slovakia`(didn't get sequencing data from NCBI_Virus); add USA\n",
     "- Nucleotide Completeness: `complete`\n"
    ]
   },
@@ -3749,7 +3749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "e94eddc3-2873-4e1a-a354-e9f3fe4c8d0b",
    "metadata": {},
    "outputs": [],
@@ -3759,7 +3759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "ee6d81b4-187b-4ac1-90c2-a58ed7825bd0",
    "metadata": {},
    "outputs": [],
@@ -3769,7 +3769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "312e1d7a-9edc-409b-8001-c03bf55c491d",
    "metadata": {},
    "outputs": [],
@@ -3779,7 +3779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "15b93579-64f9-4d69-ac79-dcabda533452",
    "metadata": {},
    "outputs": [],
@@ -3789,7 +3789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "39076bc3-fe72-4122-be92-4311a2b40ae9",
    "metadata": {},
    "outputs": [],
@@ -3799,7 +3799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "94851452-2c99-4d61-9c6f-72d0782cfa03",
    "metadata": {},
    "outputs": [],
@@ -3809,7 +3809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "id": "2cc5e329-0fce-41ec-924b-9c4fa97f9fcd",
    "metadata": {},
    "outputs": [],
@@ -3819,7 +3819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "id": "f0fd177e-1599-4bf3-8822-fa2f7cb1d5e8",
    "metadata": {},
    "outputs": [],
@@ -3829,7 +3829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "8ff3ce6c-a20c-41e6-a998-74334f6f5031",
    "metadata": {},
    "outputs": [],
@@ -3839,7 +3839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "fc3e4d99-87ed-4d2c-952c-b83ba6cf7533",
    "metadata": {},
    "outputs": [],
@@ -3849,13 +3849,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "6a35862b-0b1d-4ab4-be4f-f82df5db8be3",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_aa_UT.to_csv(\"../Data/NCBI_virus/protein_USA_UT.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2280be5b-22cd-4639-a164-2643d6bf0a04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
