--- a/Data_preprocessing/climate.ipynb
+++ b/Data_preprocessing/climate.ipynb
@@ -64,40 +64,286 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9eff1be3-7c91-4530-81ac-4d8ba739e7fe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pandas.core import frame\n",
+    "import pandas as pd\n",
+    "import glob"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0eb88afe-bb9a-4c6f-9545-cec7dca81c76",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d8ab49f4-0076-4294-9d8c-0c1fc1bfd556",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>MO</th>\n",
+       "      <th>DY</th>\n",
+       "      <th>ALLSKY_SFC_SW_DWN</th>\n",
+       "      <th>WS2M</th>\n",
+       "      <th>PRECTOTCORR</th>\n",
+       "      <th>RH2M</th>\n",
+       "      <th>QV2M</th>\n",
+       "      <th>T2M_RANGE</th>\n",
+       "      <th>PS</th>\n",
+       "      <th>WS50M_RANGE</th>\n",
+       "      <th>WS10M_RANGE</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.34</td>\n",
+       "      <td>5.43</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>65.50</td>\n",
+       "      <td>9.77</td>\n",
+       "      <td>-271.04</td>\n",
+       "      <td>101.51</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>2.69</td>\n",
+       "      <td>Bahrain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.11</td>\n",
+       "      <td>2.62</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>55.62</td>\n",
+       "      <td>8.36</td>\n",
+       "      <td>-271.02</td>\n",
+       "      <td>101.76</td>\n",
+       "      <td>4.77</td>\n",
+       "      <td>3.88</td>\n",
+       "      <td>Bahrain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>3.96</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>75.38</td>\n",
+       "      <td>11.84</td>\n",
+       "      <td>-268.13</td>\n",
+       "      <td>101.63</td>\n",
+       "      <td>5.70</td>\n",
+       "      <td>5.01</td>\n",
+       "      <td>Bahrain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.85</td>\n",
+       "      <td>4.34</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>71.69</td>\n",
+       "      <td>11.35</td>\n",
+       "      <td>-267.09</td>\n",
+       "      <td>101.25</td>\n",
+       "      <td>4.90</td>\n",
+       "      <td>5.12</td>\n",
+       "      <td>Bahrain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>5.83</td>\n",
+       "      <td>6.87</td>\n",
+       "      <td>81.56</td>\n",
+       "      <td>10.86</td>\n",
+       "      <td>-268.98</td>\n",
+       "      <td>101.44</td>\n",
+       "      <td>9.07</td>\n",
+       "      <td>8.02</td>\n",
+       "      <td>Bahrain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1091</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>27</td>\n",
+       "      <td>3.13</td>\n",
+       "      <td>2.23</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>64.81</td>\n",
+       "      <td>9.46</td>\n",
+       "      <td>-270.96</td>\n",
+       "      <td>101.65</td>\n",
+       "      <td>5.02</td>\n",
+       "      <td>4.01</td>\n",
+       "      <td>Bahrain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1092</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2.81</td>\n",
+       "      <td>8.16</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>72.56</td>\n",
+       "      <td>9.28</td>\n",
+       "      <td>-269.35</td>\n",
+       "      <td>102.09</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>Bahrain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1093</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3.34</td>\n",
+       "      <td>6.38</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>68.56</td>\n",
+       "      <td>9.09</td>\n",
+       "      <td>-269.42</td>\n",
+       "      <td>102.47</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>Bahrain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1094</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2.34</td>\n",
+       "      <td>4.27</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>62.50</td>\n",
+       "      <td>8.54</td>\n",
+       "      <td>-270.57</td>\n",
+       "      <td>102.57</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>2.91</td>\n",
+       "      <td>Bahrain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1095</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2.72</td>\n",
+       "      <td>4.89</td>\n",
+       "      <td>2.74</td>\n",
+       "      <td>72.19</td>\n",
+       "      <td>9.28</td>\n",
+       "      <td>-270.17</td>\n",
+       "      <td>102.54</td>\n",
+       "      <td>6.98</td>\n",
+       "      <td>6.59</td>\n",
+       "      <td>Bahrain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1096 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      YEAR  MO  DY  ALLSKY_SFC_SW_DWN  WS2M  PRECTOTCORR   RH2M   QV2M  \\\n",
+       "0     2020   1   1               3.34  5.43         0.00  65.50   9.77   \n",
+       "1     2020   1   2               3.11  2.62         0.00  55.62   8.36   \n",
+       "2     2020   1   3               3.70  3.96         0.00  75.38  11.84   \n",
+       "3     2020   1   4               2.85  4.34         0.00  71.69  11.35   \n",
+       "4     2020   1   5               0.58  5.83         6.87  81.56  10.86   \n",
+       "...    ...  ..  ..                ...   ...          ...    ...    ...   \n",
+       "1091  2022  12  27               3.13  2.23         0.08  64.81   9.46   \n",
+       "1092  2022  12  28               2.81  8.16         0.09  72.56   9.28   \n",
+       "1093  2022  12  29               3.34  6.38         0.00  68.56   9.09   \n",
+       "1094  2022  12  30               2.34  4.27         0.98  62.50   8.54   \n",
+       "1095  2022  12  31               2.72  4.89         2.74  72.19   9.28   \n",
+       "\n",
+       "      T2M_RANGE      PS  WS50M_RANGE  WS10M_RANGE Location  \n",
+       "0       -271.04  101.51         3.36         2.69  Bahrain  \n",
+       "1       -271.02  101.76         4.77         3.88  Bahrain  \n",
+       "2       -268.13  101.63         5.70         5.01  Bahrain  \n",
+       "3       -267.09  101.25         4.90         5.12  Bahrain  \n",
+       "4       -268.98  101.44         9.07         8.02  Bahrain  \n",
+       "...         ...     ...          ...          ...      ...  \n",
+       "1091    -270.96  101.65         5.02         4.01  Bahrain  \n",
+       "1092    -269.35  102.09         4.10         3.89  Bahrain  \n",
+       "1093    -269.42  102.47         3.00         2.59  Bahrain  \n",
+       "1094    -270.57  102.57         3.51         2.91  Bahrain  \n",
+       "1095    -270.17  102.54         6.98         6.59  Bahrain  \n",
+       "\n",
+       "[1096 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = \"../Data/Climate/nasa_data/Bahrain.csv\"\n",
+    "df = pd.read_csv(path)\n",
+    "df['Location'] = path[26:-4]\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dae7f972-55b8-48c6-b90d-96e9a5cdbac8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a75d286-ddee-4c7c-be38-8d12b583f490",
+   "id": "e7e66cd5-a61c-4da9-a1f2-81cd03856231",
    "metadata": {},
    "outputs": [],
    "source": []
