importe data preprocessing

--- a/Neo4j/neo.ipynb
+++ b/Neo4j/neo.ipynb
@@ -3,10 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4eac7792-7994-47a0-9fc8-545ff40b7740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install python-dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "e7c34f94-8594-476a-9589-7388ad55a1f8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from neo4j import GraphDatabase\n",
+    "from dotenv import load_dotenv\n",
+    "import os"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -18,19 +32,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9ef263bc-2a16-4ba1-b9d2-df4453885b55",
+   "execution_count": 7,
+   "id": "e49549b7-770c-4084-8a72-919e71b15c28",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "load_dotenv(\"my.env\")\n",
+    "password= os.getenv(\"NEO_PASS\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "904eb25e-952a-49f9-b00c-343724340e0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9ef263bc-2a16-4ba1-b9d2-df4453885b55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new Driver instance\n",
+    "driver = GraphDatabase.driver(\"neo4j://localhost:7687\",\n",
+    "    auth=(\"neo4j\", password))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "d8963c8e-9991-4f5c-a845-c18c60913fbc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Verify the connection details\n",
+    "driver.verify_connectivity()"
+   ]
   },
   {
    "cell_type": "code",
@@ -38,7 +91,16 @@
    "id": "b152c1b3-0e2a-4298-a680-7f419135e4fb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def init_driver(uri, username, password):\n",
+    "    # Create an instance of the driver\n",
+    "    current_app.driver = GraphDatabase.driver(uri, auth=(username, password))\n",
+    "\n",
+    "    # Verify Connectivity\n",
+    "    current_app.driver.verify_connectivity()\n",
+    "\n",
+    "    return current_app.driver"
+   ]
   },
   {
    "cell_type": "code",
@@ -177,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
